fixed navigation menu on mobile version

--- a/src/css/components/_fao-navigation.scss
+++ b/src/css/components/_fao-navigation.scss
@@ -266,6 +266,10 @@ div#google_search input#search-submit {
 
 }
 
+.navbar-default .navbar-toggle {
+  border-color: transparent;
+}
+
 
 
 
